--- a/tests/Cli.suite.yml
+++ b/tests/Cli.suite.yml
@@ -1,5 +1,5 @@
 actor: CliTester
-suite_namespace: Forge\App\Tests\Cli
+suite_namespace: Forge\Demo\Tests\Cli
 modules:
     # enable helpers as array
     enabled: [Cli]
