--- a/tests/Functional.suite.yml
+++ b/tests/Functional.suite.yml
@@ -9,5 +9,5 @@ actor: FunctionalTester
 modules:
     enabled:
         # add a framework module here
-        - \Forge\App\Tests\Helper\Functional
-    step_decorators: ~        
+        - \Forge\Demo\Tests\Helper\Functional
+    step_decorators: ~
