--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,22 +7,23 @@
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true"
          stopOnFailure="false">
-  <php>
-    <ini name="error_reporting" value="-1" />
-  </php>
 
-  <coverage>
-    <include>
-      <directory>./src</directory>
-    </include>
-    <exclude>
-      <directory>./vendor</directory>
-    </exclude>
-  </coverage>
+    <php>
+        <ini name="error_reporting" value="-1" />
+    </php>
 
-  <testsuites>
-    <testsuite name="Template">
-      <directory>./tests</directory>
-    </testsuite>
-  </testsuites>
+    <coverage>
+        <include>
+            <directory>./src</directory>
+        </include>
+        <exclude>
+            <directory>./vendor</directory>
+        </exclude>
+    </coverage>
+
+    <testsuites>
+        <testsuite name="Demo">
+            <directory>./tests</directory>
+        </testsuite>
+    </testsuites>
 </phpunit>
