--- a/tests/Unit.suite.yml
+++ b/tests/Unit.suite.yml
@@ -6,5 +6,5 @@ actor: UnitTester
 modules:
     enabled:
         - Asserts
-        - \Forge\App\Tests\Helper\Unit
-    step_decorators: ~        
+        - \Forge\Demo\Tests\Helper\Unit
+    step_decorators: ~
