--- a/.github/workflows/codeception.yml
+++ b/.github/workflows/codeception.yml
@@ -52,11 +52,12 @@ jobs:
         run: |
           php -S 127.0.0.1:8080 -t public public/index.php > ./runtime/yii.log 2>&1 &
           vendor/bin/codecept run --coverage-xml
+
       - name: Archive codeception results
         uses: actions/upload-artifact@v2
         with:
           name: output
-          path: ./tests/_output
+          path: ./runtime/mail
 
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v2
