--- a/.github/workflows/codeception.yml
+++ b/.github/workflows/codeception.yml
@@ -9,7 +9,7 @@ jobs:
     name: PHP ${{ matrix.php }}-${{ matrix.os }}
 
     env:
-      extensions: fileinfo, gd, intl
+      extensions: fileinfo, intl
 
     runs-on: ${{ matrix.os }}
 
@@ -17,7 +17,6 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - windows-latest
 
         php:
           - 8.0
