--- a/.github/workflows/codeception.yml
+++ b/.github/workflows/codeception.yml
@@ -47,8 +47,10 @@ jobs:
           sed -i "5 a require_once dirname(__DIR__) . '/c3.php';" public/index.php
           cat public/index.php
 
+      - name: Permission directory
+        run: chmod -R 777 tests/_output
+
       - name: Run tests with codeception
-        continue-on-error: true
         run: |
           php -S 127.0.0.1:8080 -t public public/index.php > ./runtime/yii.log 2>&1 &
           vendor/bin/codecept run --coverage-xml
